--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ web-build/
 
 # macOS
 .DS_Store
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Production
+build/
+
+# IDE specific
+.vscode/
+.idea/
+
