Web Google Button Added

--- a/app.json
+++ b/app.json
@@ -26,8 +26,12 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "assetBundlePatterns":[
+       "assets/**/*"
+    ],
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
