--- a/app.json
+++ b/app.json
@@ -19,15 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sweet.idk"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "assetBundlePatterns":[
-       "assets/**/*"
+    "assetBundlePatterns": [
+      "assets/**/*"
     ],
     "plugins": [
       "expo-router",
@@ -35,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4f2850f8-174c-4109-9185-e51c53aee754"
+      }
     }
   }
 }
