--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
-    "expo-auth-session": "~5.5.2",
+    "expo-auth-session": "~5.4.0",
     "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
+    "expo-crypto": "~12.8.1",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -38,11 +39,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6",
-    "expo-crypto": "~12.8.1",
-    "expo-auth-session": "~5.4.0",
-    "@expo/webpack-config": "~19.0.1",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
