--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "build": "expo export:web"
+    "build": "npx expo export:web"
   },
   "jest": {
     "preset": "jest-expo"
@@ -41,7 +41,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
